manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:
    app.kubernetes.io/name: accounts-admin-portal
  name: accounts-admin-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: accounts-admin-portal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: accounts-admin-portal
    spec:
      containers:
      - image: docker.io/lazycomputing/accounts-admin-portal
        name: accounts-admin-portal
      dnsConfig:
        options:
          - name: ndots
            value: "2"
