manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounts-admin-portal
  labels:
    app.kubernetes.io/name: accounts-admin-portal
spec:
  selector:
    app.kubernetes.io/name: accounts-admin-portal
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
