manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accounts-admin-portal
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: account.lazycomputing.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: accounts-admin-portal
            port:
              number: 80
